# stable-fs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_tests.sh  cargo-tarpaulin.toml  deploy_tests.sh  ic-test.json
.codegpt/: head
.github/workflows/: ci.yml  coverage.yml  test.yml
integration-tests/: Cargo.toml
integration-tests/src/: test_setup.rs  tests.rs
integration-tests/src/bindings/: canister_initial_backend.rs  canister_upgraded_backend.rs  mod.rs
scripts/: build_tests.sh  deploy_tests.sh
src/: error.rs  filename_cache.rs  fs.rs  fs_tests.rs  integration_tests.rs  lib.rs  main.rs  runtime.rs  storage.rs  test_utils.rs
src/runtime/: dir.rs  fd.rs  file.rs  structure_helpers.rs  symlink.rs  types.rs
src/storage/: allocator.rs  chunk_iterator.rs  dummy.rs  iterator.rs  journal.rs  metadata_cache.rs  metadata_provider.rs  ptr_cache.rs  stable.rs  transient.rs  types.rs
src/tests/: download-pocket-ic.sh  perf.sh
src/tests/demo_test/: Cargo.toml  README.md  dfx.json
src/tests/demo_test/src/demo_test_backend/: Cargo.toml  demo_test_backend.did
src/tests/demo_test/src/demo_test_backend/src/: lib.rs
src/tests/demo_test_upgraded/: Cargo.toml
src/tests/demo_test_upgraded/src/demo_test_upgraded_backend/: Cargo.toml
src/tests/demo_test_upgraded/src/demo_test_upgraded_backend/src/: lib.rs
src/tests/fs_benchmark_test/: Cargo.toml  clear_buffer.sh  clear_chunk.sh  create_chunk.sh  load_chunk.sh  read_chunk.sh  store_chunk.sh
src/tests/fs_benchmark_test/src/fs_benchmark_test_backend/: Cargo.toml
src/tests/fs_benchmark_test/src/fs_benchmark_test_backend/src/: lib.rs
stable-fs/: Cargo.toml
stable-fs/src/: error.rs  fs.rs  fs_tests.rs  integration_tests.rs  lib.rs  storage.rs  test_utils.rs
stable-fs/src/runtime/: dir.rs  fd.rs  file.rs  structure_helpers.rs  types.rs
stable-fs/src/storage/: allocator.rs  chunk_iterator.rs  dummy.rs  journal.rs  metadata_provider.rs  ptr_cache.rs  stable.rs  transient.rs  types.rs
test_canisters/: b.sh  fsperf.repl  perf.repl
test_canisters/canister_initial/: create_buffer.sh  load_buffer.sh  read_buffer.sh
test_canisters/canister_initial/src/canister_initial_backend/: Cargo.toml
test_canisters/canister_initial/src/canister_initial_backend/src/: lib.rs
test_canisters/canister_upgraded/: dfx.json
test_canisters/canister_upgraded/src/canister_upgraded_backend/: Cargo.toml  canister_upgraded_backend.did
test_canisters/canister_upgraded/src/canister_upgraded_backend/src/: lib.rs
tests/: a  fsperf.repl  perf.sh
tests/canister_initial/: .env  .gitignore  Cargo.toml  clear_buffer.sh  store_buffer.sh  store_stable.sh
tests/canister_initial/.codegpt/: head
tests/canister_initial/.dfx/local/: canister_ids.json  network-id
tests/canister_initial/src/canister_initial_backend/: Cargo.toml
tests/canister_initial/src/canister_initial_backend/src/: lib.rs
tests/canister_upgraded/: README.md
tests/canister_upgraded/src/canister_upgraded_backend/: Cargo.toml
tests/canister_upgraded/src/canister_upgraded_backend/src/: lib.rs
tests/demo_test_upgraded/: README.md
tests/demo_test_upgraded/src/demo_test_upgraded_backend/: Cargo.toml
tests/demo_test_upgraded/src/demo_test_upgraded_backend/src/: lib.rs
tests/fs_benchmark_test/: Cargo.toml  create_buffer.sh  dfx.json  load_buffer.sh  read_buffer.sh  store_buffer_4k.sh  store_stable.sh
tests/fs_benchmark_test/src/fs_benchmark_test_backend/: Cargo.toml  fs_benchmark_test_backend.did
tests/fs_benchmark_test/src/fs_benchmark_test_backend/src/: lib.rs
tests/fs_benchmarks/: .gitignore  Cargo.toml  README.md  build.sh  canbench.yml  canbench_results.yml  dfx.json
tests/fs_benchmarks/src/fs_benchmarks_backend/: Cargo.toml
tests/fs_benchmarks/src/fs_benchmarks_backend/src/: lib.rs
tests/res/: structure-v0_4-op35_1000.txt
