[package]
name = "stable-fs"
version = "0.8.1"
edition = "2024"
description = "A Simple File system using the stable structures of the Internet Computer that implements WASI endpoints"
keywords = ["ic", "internet-computer", "file-system"]
license = "MIT"
repository = "https://github.com/wasm-forge/stable-fs"

[dependencies]
bitflags = "2.9.1"
ic-cdk = "0.18.5"
ic-stable-structures = "0.6.9"

serde = "1.0.219"
serde_bytes = "0.11.17"
ciborium = "0.2.2"

[dev-dependencies]
candid = "0.10.14"
pocket-ic = "9.0.2"
