[workspace]
members = [
    "stable-fs",
    "test_canisters/canister_initial/src/canister_initial_backend",
    "test_canisters/canister_upgraded/src/canister_upgraded_backend",
]
resolver = "2"

[workspace.dependencies]

bitflags = "2.9.1"
ciborium = "0.2.2"

ic-cdk = "0.18.5"
ic-stable-structures = "0.7.0"

serde = "1.0.219"
serde_bytes = "0.11.17"

candid = "0.10.14"
pocket-ic = "9.0.2"
hex = "0.4.3"

stable-fs = { path = "stable-fs" }