[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
candid.workspace = true
cargo_metadata.workspace = true
ic-test.workspace = true
pocket-ic.workspace = true
serde.workspace = true
serde_bytes.workspace = true
tokio.workspace = true
convert_case.workspace = true
