[package]
name = "stable-fs"
version = "0.12.0"
edition = "2024"
description = "A Simple File system using the stable structures of the Internet Computer that implements WASI endpoints"
keywords = ["ic", "internet-computer", "file-system"]
license = "MIT"
repository = "https://github.com/wasm-forge/stable-fs"

[dependencies]
bitflags.workspace = true
ic-cdk.workspace = true
ic-stable-structures.workspace = true

serde.workspace = true
serde_bytes.workspace = true
ciborium.workspace = true

[dev-dependencies]
candid.workspace = true
pocket-ic.workspace = true

