[package]
name = "canister_initial_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.7"
stable-fs = {path="../../../../../stable-fs"}

serde = "1.0.216"
serde_bytes = "0.11.15"
ciborium = "0.2.2"
hex = "0.4"
